--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.1.3",
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
+    "daisyui": "^2.38.0",
     "express": "^4.18.2",
     "nodemon": "^2.0.20",
     "path": "^0.12.7"
